fix - corrected a score display bug where score was being covered by the game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ h1{
 /* score */
 #score{
     margin:auto;
-    margin-top:-5px;
+    margin-top:-10px;
     width:610px;
     height:50px;
     text-align:center;
